--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "sass": "^1.62.1",
+    "taos": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
