--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.1",
     "bootstrap": "^5.2.3",
+    "framer": "^2.3.0",
+    "framer-motion": "^10.12.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
